@@ -20,50 +20,43 @@ Beta Releases
 Windows
 -------
 
-The Windows installer for the current 0.5.1 beta release, can be downloaded using the following links:
+The Windows installer for the current 0.6 beta release, can be downloaded using the following links:
 
-`Hyperspy-0.5.1 beta for Windows 32-bits 
-<http://pypi.python.org/packages/2.7/h/hyperspy/hyperspy-0.5.1.win32.exe#md5=778707c6110ffb2bb58ebd58b663f726>`_
+`Hyperspy-0.6 beta for Windows 32-bits 
+<http://cook.msm.cam.ac.uk/~fjd29/Hyperspy0.6_32bit.exe>`_
 
-`Hyperspy-0.5.1 beta for Windows 64-bits 
-<http://pypi.python.org/packages/2.7/h/hyperspy/hyperspy-0.5.1.win-amd64.exe#md5=08bbd7da3795856d57976a95df32170d>`_
+`Hyperspy-0.6 beta for Windows 64-bits 
+<http://cook.msm.cam.ac.uk/~fjd29/Hyperspy0.6_64bit.exe>`_
 
 .. WARNING::
-    Before installing Hyperspy the :ref:`the required libraries must be installed <install-dependencies>`.
-    
-    Please note that EPD 7.3 suffers from a bug that makes Hyperspy unusable. To workaround the problem while they fix it
-    you can install EPD Free instead or follow the instructions at the bottom `of this webpage
-    <https://github.com/hyperspy/hyperspy/issues/51>`_ to workaround the problem in EPD 7.3.
-    
-    If Hyperspy does not work for you even after following this instructions, please report the problem in the 
-    `users mailing-list <http://groups.google.com/group/hyperspy-users>`_ or the 
-    `issues tracker <https://github.com/hyperspy/hyperspy/issues>`_.
-    
-    Because we have recurring issues with EPD we are working
-    in a new Hyperspy release that won't depend in any external libraries. We are sorry for the inconveniences caused to
-    Window users.
-     
+   If Hyperspy fails to start you may also need to install the 
+   Microsoft Visual C++ 2008 redistributable packages 
+   (`64 bit <http://www.microsoft.com/download/en/details.aspx?id=15336>`_ or 
+   `32 bit <http://www.microsoft.com/download/en/details.aspx?id=29>`_).
 
 .. NOTE::
-    To get the handy "Hyperspy here" functionality in the context menu Hyperspy must be installed with administrator rights.
-    
-    If you do not install with administrator rights and you want to get this functionality later on open an administrator windows console and execute:
-    
-    .. code-block:: bash
-    
-        $ install_hyperspy_here
-        
-    In Windows Vista/7 there is a bug in the Python libraries and Hyperspy Here must be uninstalled manually before uninstalling Hyperspy by executing the following in an administrator Windows console:
-    
-    .. code-block:: bash
-    
-        $ uninstall_hyperspy_here
+   The above links are for the Full version of the installer that contains all 
+   the required libraries (actually it is a customized 
+   `WinPython <http://code.google.com/p/winpython/>`_ distribution). The standard
+   Windows installers (without the dependencies) can be downloaded from
+   `pypi <https://pypi.python.org/pypi/hyperspy>`_.
+     
     
 
-Ubuntu
+Ubuntu Linux
+------------
+
+An Ubuntu package `can be downloaded here 
+<http://cook.msm.cam.ac.uk/~fjd29/python-hyperspy_0.6-1_all.deb>`_. 
+It is compatible with Ubuntu Raring Tale (13.04) or newer.
+
+
+Mac OS
 ------
 
-An Ubuntu package `can be downloaded here <https://github.com/downloads/hyperspy/hyperspy/python-hyperspy_0.5.1-1_all.deb>`_. It is compatible with Ubuntu Precision Pangolin (12.04) or newer.
+Follow `this link 
+<http://hyperspy.org/hyperspy-doc/current/user_guide/install.html#quick-instructions-to-install-hyperspy-in-macos>`_
+for quick instructions on how to install Hyperspy in MacOS.
 
 
 Development version
