@@ -77,7 +77,7 @@
 </div>
 
 <div class="tile"><h4>Beta</h4>
-    0.5.1<br/>
+    0.6<br/>
     <a href="http://hyperspy.org/download.html#beta-releases">Download</a>
 </div>
 
