@@ -77,7 +77,7 @@
 </div>
 
 <div class="tile"><h4>Beta</h4>
-    0.5.1<br/>
+    0.6<br/>
     <a href="http://hyperspy.org/download.html#beta-releases">Download</a>
 </div>
 
@@ -128,37 +128,34 @@
 <span id="id1"></span><h2>Beta Releases<a class="headerlink" href="#beta-releases" title="Permalink to this headline">¶</a></h2>
 <div class="section" id="windows">
 <h3>Windows<a class="headerlink" href="#windows" title="Permalink to this headline">¶</a></h3>
-<p>The Windows installer for the current 0.5.1 beta release, can be downloaded using the following links:</p>
-<p><a class="reference external" href="http://pypi.python.org/packages/2.7/h/hyperspy/hyperspy-0.5.1.win32.exe#md5=778707c6110ffb2bb58ebd58b663f726">Hyperspy-0.5.1 beta for Windows 32-bits</a></p>
-<p><a class="reference external" href="http://pypi.python.org/packages/2.7/h/hyperspy/hyperspy-0.5.1.win-amd64.exe#md5=08bbd7da3795856d57976a95df32170d">Hyperspy-0.5.1 beta for Windows 64-bits</a></p>
+<p>The Windows installer for the current 0.6 beta release, can be downloaded using the following links:</p>
+<p><a class="reference external" href="http://cook.msm.cam.ac.uk/~fjd29/Hyperspy0.6_32bit.exe">Hyperspy-0.6 beta for Windows 32-bits</a></p>
+<p><a class="reference external" href="http://cook.msm.cam.ac.uk/~fjd29/Hyperspy0.6_64bit.exe">Hyperspy-0.6 beta for Windows 64-bits</a></p>
 <div class="admonition warning">
 <p class="first admonition-title">Warning</p>
-<p>Before installing Hyperspy the <a class="reference external" href="http://hyperspy.org/hyperspy-doc/current/user_guide/install.html#install-dependencies" title="(in Hyperspy v0.5.1)"><em class="xref std std-ref">the required libraries must be installed</em></a>.</p>
-<p>Please note that EPD 7.3 suffers from a bug that makes Hyperspy unusable. To workaround the problem while they fix it
-you can install EPD Free instead or follow the instructions at the bottom <a class="reference external" href="https://github.com/hyperspy/hyperspy/issues/51">of this webpage</a> to workaround the problem in EPD 7.3.</p>
-<p>If Hyperspy does not work for you even after following this instructions, please report the problem in the
-<a class="reference external" href="http://groups.google.com/group/hyperspy-users">users mailing-list</a> or the
-<a class="reference external" href="https://github.com/hyperspy/hyperspy/issues">issues tracker</a>.</p>
-<p class="last">Because we have recurring issues with EPD we are working
-in a new Hyperspy release that won&#8217;t depend in any external libraries. We are sorry for the inconveniences caused to
-Window users.</p>
+<p class="last">If Hyperspy fails to start you may also need to install the
+Microsoft Visual C++ 2008 redistributable packages
+(<a class="reference external" href="http://www.microsoft.com/download/en/details.aspx?id=15336">64 bit</a> or
+<a class="reference external" href="http://www.microsoft.com/download/en/details.aspx?id=29">32 bit</a>).</p>
 </div>
 <div class="admonition note">
 <p class="first admonition-title">Note</p>
-<p>To get the handy &#8220;Hyperspy here&#8221; functionality in the context menu Hyperspy must be installed with administrator rights.</p>
-<p>If you do not install with administrator rights and you want to get this functionality later on open an administrator windows console and execute:</p>
-<div class="highlight-bash"><div class="highlight"><pre><span class="nv">$ </span>install_hyperspy_here
-</pre></div>
-</div>
-<p>In Windows Vista/7 there is a bug in the Python libraries and Hyperspy Here must be uninstalled manually before uninstalling Hyperspy by executing the following in an administrator Windows console:</p>
-<div class="last highlight-bash"><div class="highlight"><pre><span class="nv">$ </span>uninstall_hyperspy_here
-</pre></div>
+<p class="last">The above links are for the Full version of the installer that contains all
+the required libraries (actually it is a customized
+<a class="reference external" href="http://code.google.com/p/winpython/">WinPython</a> distribution). The standard
+Windows installers (without the dependencies) can be downloaded from
+<a class="reference external" href="https://pypi.python.org/pypi/hyperspy">pypi</a>.</p>
 </div>
 </div>
+<div class="section" id="ubuntu-linux">
+<h3>Ubuntu Linux<a class="headerlink" href="#ubuntu-linux" title="Permalink to this headline">¶</a></h3>
+<p>An Ubuntu package <a class="reference external" href="http://cook.msm.cam.ac.uk/~fjd29/python-hyperspy_0.6-1_all.deb">can be downloaded here</a>.
+It is compatible with Ubuntu Raring Tale (13.04) or newer.</p>
 </div>
-<div class="section" id="ubuntu">
-<h3>Ubuntu<a class="headerlink" href="#ubuntu" title="Permalink to this headline">¶</a></h3>
-<p>An Ubuntu package <a class="reference external" href="https://github.com/downloads/hyperspy/hyperspy/python-hyperspy_0.5.1-1_all.deb">can be downloaded here</a>. It is compatible with Ubuntu Precision Pangolin (12.04) or newer.</p>
+<div class="section" id="mac-os">
+<h3>Mac OS<a class="headerlink" href="#mac-os" title="Permalink to this headline">¶</a></h3>
+<p>Follow <a class="reference external" href="http://hyperspy.org/hyperspy-doc/current/user_guide/install.html#quick-instructions-to-install-hyperspy-in-macos">this link</a>
+for quick instructions on how to install Hyperspy in MacOS.</p>
 </div>
 </div>
 <div class="section" id="development-version">
