@@ -77,7 +77,7 @@
 </div>
 
 <div class="tile"><h4>Beta</h4>
-    0.5.1<br/>
+    0.6<br/>
     <a href="http://hyperspy.org/download.html#beta-releases">Download</a>
 </div>
 
@@ -121,6 +121,7 @@
   <div class="section" id="news">
 <h1>News<a class="headerlink" href="#news" title="Permalink to this headline">¶</a></h1>
 <ul class="simple">
+<li><tt class="docutils literal"><span class="pre">04/06/2013</span></tt> Hyperspy 0.6  has been released! See <a class="reference internal" href="download.html#beta-releases"><em>Beta Releases</em></a></li>
 <li>A tutorial on analysis of multidimensional spectra using Hyperspy is available as part of the official program of SFMu 2013. See <a class="reference internal" href="trainings.html#trainings"><em>Trainings</em></a> for more details.</li>
 <li><tt class="docutils literal"><span class="pre">28/09/2012</span></tt> Hyperspy 0.5.1  has been released! See <a class="reference internal" href="download.html#beta-releases"><em>Beta Releases</em></a></li>
 <li><tt class="docutils literal"><span class="pre">8/09/2012</span></tt> Hyperspy 0.5  has been released! See <a class="reference internal" href="download.html#beta-releases"><em>Beta Releases</em></a></li>
