@@ -1,1 +1,1 @@
-Search.setIndex({objects:{},terms:{all:[0,7],code:7,follow:5,manchest:2,depend:[5,7],zone:7,sorri:5,send:[3,7],program:[0,6],spain:2,under:0,whishlist:7,digit:[5,0,1,6],sourc:0,everi:7,faq:[3,1],electron:[0,2],poitier:2,octob:2,"24th":2,cool:1,administr:5,did:1,list:[5,3,1,2,7],"try":3,item:7,team:7,grenobl:2,pleas:[5,0,3,1],epd:5,past:2,design:5,download:[5,1,7],click:2,even:5,sud:2,section:[0,7],abl:0,current:[5,1,4],version:[0,1,3,4,5,6,7],"new":[5,0,6],nant:2,here:[5,0,2],luiz:5,ubuntu:5,path:5,strong:7,sinc:1,hdf5:[0,1],precis:5,chang:1,via:1,extra:5,transit:5,ask:[5,1],hyperspi:[0,3,1,5,6,7],instal:[5,7],txt:7,from:[5,7],describ:1,would:2,univers:2,scope:1,type:1,minor:5,more:[0,2,6],relat:5,warn:5,train:[0,3,2,6],compani:2,must:5,account:[3,7],join:[3,7],work:[5,0,7],cambridg:2,can:[5,3,1,7],learn:0,control:7,spy:1,prompt:5,process:2,want:[5,3,1,2,7],unus:5,multipl:0,goal:1,write:[0,1],how:0,answer:[3,1],instead:5,updat:7,clone:7,after:[5,7],befor:5,mai:[3,2],data:[5,0,1,2],welcom:7,github:7,attempt:1,spectra:[0,6],issu:5,inform:[2,7],offici:[0,6],move:7,becaus:[5,1],veri:1,through:2,suffer:5,group:7,fit:0,fix:[5,3],better:1,window:5,mail:[5,3,1,2,7],pca:0,evok:1,thei:[5,7],python:[5,0,1],handi:5,devel:7,oxford:2,now:1,discuss:7,name:[5,1],found:3,laboratori:2,connect:0,year:2,our:[0,7],energi:0,beyond:1,special:0,"3rd":2,req:7,research:0,install_hyperspy_her:5,dataset:0,franc:2,advanc:2,free:[5,7],standard:[5,0,1],base:[3,7],releas:[5,0,6],could:3,isn:1,"universit\u00e9":2,think:[3,1],softwar:[5,1],directli:5,feel:1,acquisit:2,instruct:5,stabl:5,agre:1,open:[5,0,1],gpl:0,workaround:5,licens:0,system:7,cite:0,forthcom:2,consol:5,juli:2,pari:2,digitalmicrograph:5,part:[0,6],reinstal:7,keyword:5,provid:0,project:[0,1,7],were:5,analysi:[0,1,6],ani:[5,1,2],packag:[5,1],have:[5,3,1,7],need:[3,7],caus:5,date:5,note:5,also:[3,7],without:[5,3,7],which:1,tool:[1,7],compat:5,sure:1,distribut:7,favourit:1,most:1,beta:[5,0,4,6],why:1,don:7,doc:[3,1],later:5,request:7,doe:[5,0,1],fact:0,uninstal:5,show:0,hyperspectr:[0,1],find:[3,7],impact:0,execut:5,menu:5,activ:0,should:7,rich:0,analys:1,contribut:0,get:5,googlegroup:[3,7],report:[5,3,7],toolbox:0,requir:5,emc:2,emb:7,"public":0,common:0,septemb:2,"16th":2,microscopi:[0,2],see:[7,0,1,6],best:7,inconveni:5,particip:2,written:5,won:5,between:5,"import":[5,0,1,7],email:[3,7],extens:5,solv:5,plugin:[5,0,1,6],rippl:[5,1],tutori:[0,6],context:5,com:[3,7],gatan:1,guid:[0,7],rpl:1,recur:5,been:[7,0,1,6],mark:7,much:1,interest:3,subscrib:[3,7],imag:1,spectrum:1,those:7,raw:5,"while":5,error:1,customis:0,ripl:5,itself:5,revis:0,sever:2,grown:1,develop:[5,0,4,2,7],cea:2,author:0,perform:0,make:5,same:5,read:[0,1],document:4,rais:1,user:[5,0,3,1,7],extern:[5,7],well:[0,1,7],importrpl:[5,0,1,6],contact:2,thi:[5,0,3,7],micrograph:[5,0,1,6],academ:0,latest:1,just:1,calibr:5,yet:[0,7],web:[3,7],easi:[5,0],add:5,bibliographi:0,save:1,barcelon:2,bin:5,march:2,format:[5,0,1],webpag:5,bit:5,hyperpsi:4,loss:0,like:[1,2,7],cooler:1,manual:5,fernando:5,eel:0,either:1,lose:5,page:7,right:5,old:1,lastest:5,acknowledg:0,"export":1,zagonel:5,librari:5,lead:0,bottom:5,ica:0,tracker:5,exit:5,machin:0,encourag:7,run:[2,7],host:7,repositori:7,about:7,sfmu:[0,2,6],uninstall_hyperspy_her:5,your:[3,1,2,7],git:7,wai:7,support:[0,3,1],question:[3,1],avail:[0,7,6],suit:0,hei:1,"function":5,pangolin:5,link:5,newer:5,bug:[5,3,7],spectroscopi:0,possibl:[1,7],"default":1,checkout:7,below:1,problem:5,curv:0,featur:[5,1,7],creat:[1,7],file:[5,0,1],pip:7,check:1,vista:5,googl:[3,7],when:[5,1],detail:[0,6],field:0,other:[5,0,1],you:[5,3,1,2,7],june:2,multidimension:[0,6],eelslab:1,scientif:0,directori:7,time:2},objtypes:{},titles:["Hyperspy: Hyperspectral data analysis toolbox","FAQ","Trainings","Support","Documentation","Download","News","<strong>Developer Zone</strong>"],objnames:{},filenames:["index","faq","trainings","support","documentation","download","news","developer"]})
+Search.setIndex({objects:{},terms:{winpython:5,all:[5,0,7],code:7,execut:5,show:0,abl:0,hyperspectr:[0,1],move:7,find:[3,7],becaus:1,report:[3,7],calibr:5,through:2,keyword:5,follow:5,yet:[0,7],impact:0,web:[3,7],don:7,manchest:2,group:7,just:1,zone:7,field:0,fix:3,activ:0,send:[3,7],should:7,better:1,window:5,program:[0,6],bibliographi:0,requir:5,rich:0,under:0,mail:[3,1,2,7],pca:0,analys:1,offici:[0,6],whishlist:7,bin:5,barcelon:2,digit:[5,0,1,6],evok:1,everi:7,contribut:0,thei:7,format:[5,0,1],python:[0,1],googlegroup:[3,7],faq:[3,1],pypi:5,devel:7,electron:[0,2],softwar:[5,1],poitier:2,veri:1,bit:5,now:1,imag:1,discuss:7,hyperpsi:4,cool:1,loss:0,document:4,name:[5,1],emc:2,emb:7,did:1,list:[3,1,2,7],fernando:5,email:[3,7],"try":3,item:7,either:1,have:[3,1,7],team:7,quick:5,found:3,fail:5,septemb:2,grenobl:2,page:7,microscopi:[0,2],depend:[5,7],pleas:[0,3,1],provid:0,work:[0,7],old:1,lastest:5,laboratori:2,multipl:0,past:2,see:[7,0,1,6],sure:1,design:5,connect:0,instal:[5,7],download:[5,1,7],our:[0,7],energi:0,beyond:1,zagonel:5,special:0,univers:2,compat:5,googl:[3,7],sud:2,lead:0,eel:0,spectrum:1,section:[0,7],req:7,particip:2,research:0,current:[5,1,4],written:5,version:[0,1,3,4,5,6,7],exit:5,rare:5,between:5,without:[5,3,7],"new":[5,0,6],"public":0,note:5,common:0,machin:0,franc:2,encourag:7,full:5,run:[2,7],abov:5,favourit:1,advanc:2,contain:5,free:7,like:[1,2,7],luiz:5,extens:5,host:7,base:[3,7],here:[5,0,2],repositori:7,ubuntu:5,solv:5,path:5,standard:[5,0,1],sinc:1,about:7,actual:5,fit:0,plugin:[5,0,1,6],oxford:2,could:3,ask:[5,1],beta:[5,0,4,6],"16th":2,tutori:[0,6],isn:1,why:1,chang:1,com:[3,7],think:[3,1],add:5,gatan:1,sfmu:[0,2,6],via:1,directli:5,extra:5,feel:1,"import":[5,0,1,7],transit:5,dataset:0,acquisit:2,instruct:5,featur:[5,1,7],"24th":2,linux:5,hyperspi:[0,3,1,5,6,7],stabl:5,guid:[0,7],open:[5,0,1],rpl:1,gpl:0,strong:7,from:[5,7],describ:1,wai:7,lose:5,"universit\u00e9":2,licens:0,support:[0,3,1],question:[3,1],system:7,been:[7,0,1,6],custom:5,avail:[0,7,6],start:5,much:1,interest:3,acknowledg:0,txt:7,scope:1,type:1,hei:1,minor:5,more:[0,2,6],analysi:[0,1,6],nant:2,agre:1,juli:2,subscrib:[3,7],pari:2,ani:[1,2],warn:5,digitalmicrograph:5,visual:5,train:[0,3,2,6],link:5,newer:5,date:5,git:7,compani:2,bug:[5,3,7],those:7,reinstal:7,also:[5,3,7],account:[3,7],save:1,join:[3,7],spectroscopi:0,possibl:[1,7],"default":1,checkout:7,hdf5:[0,1],cambridg:2,cite:0,project:[0,1,7],directori:7,below:1,itself:5,can:[5,3,1,7],redistribut:5,learn:0,were:5,"export":1,inform:[2,7],other:[5,0,1],github:7,control:7,spy:1,would:2,prompt:5,want:[3,1,2,7],creat:[1,7],process:2,rippl:[5,1],cea:2,year:2,customis:0,ripl:5,raw:5,pip:7,sourc:0,file:[5,0,1],cooler:1,octob:2,march:2,revis:0,check:1,sever:2,packag:[5,1],mai:[5,3,2],goal:1,well:[0,1,7],author:0,perform:0,when:[5,1],detail:[0,6],same:5,click:2,write:[0,1],how:[5,0],need:[5,3,7],contact:2,toolbox:0,best:7,which:1,answer:[3,1],easi:[5,0],you:[5,3,1,2,7],librari:5,microsoft:5,tool:[1,7],updat:7,grown:1,curv:0,relat:5,extern:7,distribut:[5,7],clone:7,after:7,june:2,multidimension:[0,6],most:1,mac:5,releas:[5,0,6],user:[0,3,1,7],maco:5,develop:[5,0,4,2,7],data:[5,0,1,2],eelslab:1,welcom:7,your:[3,1,2,7],forthcom:2,attempt:1,"3rd":2,scientif:0,read:[0,1],doc:[3,1],suit:0,spectra:[0,6],request:7,rais:1,doe:[0,1],tale:5,mark:7,importrpl:[5,0,1,6],part:[0,6],spain:2,error:1,thi:[5,0,3,7],time:2,micrograph:[5,0,1,6],academ:0,ica:0,fact:0,latest:1},objtypes:{},titles:["Hyperspy: Hyperspectral data analysis toolbox","FAQ","Trainings","Support","Documentation","Download","News","<strong>Developer Zone</strong>"],objnames:{},filenames:["index","faq","trainings","support","documentation","download","news","developer"]})
