@@ -1,5 +1,6 @@
 News
 ====
+* ``04/06/2013`` Hyperspy 0.6  has been released! See :ref:`beta-releases`
 * A tutorial on analysis of multidimensional spectra using Hyperspy is available as part of the official program of SFMu 2013. See :ref:`trainings` for more details.  
 * ``28/09/2012`` Hyperspy 0.5.1  has been released! See :ref:`beta-releases`
 * ``8/09/2012`` Hyperspy 0.5  has been released! See :ref:`beta-releases`
